src/elements/snapshots/panoramix__elements__element_list__tests__empty_list.snap
---
source: src/elements/element_list.rs
expression: list
---
ElementList {
    children: [],
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
