src/elements/snapshots/panoramix__elements__element_list__tests__list_label_widget-2.snap
---
source: src/elements/element_list.rs
expression: list_state_2

---
RootWidget(
    Column(
        Label(
            "AAA",
        ),
        Label(
            "DDD",
        ),
        Label(
            "bbb",
        ),
        Label(
            "ccc",
        ),
    ),
)
