src/elements/snapshots/panoramix__elements__element_list__tests__list_label_widget-3.snap
---
source: src/elements/element_list.rs
expression: empty_list_state

---
RootWidget(
    Scroll(
        ClipBox(
            Column,
        ),
    ),
)
