src/elements/snapshots/panoramix__elements__element_list__tests__list_label_widget.snap
---
source: src/elements/element_list.rs
expression: list_state

---
RootWidget(
    Column(
        Label(
            "aaa",
        ),
        Label(
            "bbb",
        ),
        Label(
            "ccc",
        ),
    ),
)
