src/elements/snapshots/panoramix__elements__element_list__tests__new_list-2.snap
---
source: src/elements/element_list.rs
expression: list_data

---
ElementListData {
    children: [
        (
            "aaa",
            LabelData {
                text: "aaa",
                flex: FlexParams {
                    flex: None,
                    alignment: None,
                },
            },
        ),
        (
            "bbb",
            LabelData {
                text: "bbb",
                flex: FlexParams {
                    flex: None,
                    alignment: None,
                },
            },
        ),
        (
            "ccc",
            LabelData {
                text: "ccc",
                flex: FlexParams {
                    flex: None,
                    alignment: None,
                },
            },
        ),
    ],
}
