src/elements/snapshots/panoramix__elements__element_list__tests__new_list.snap
---
source: src/elements/element_list.rs
expression: list

---
ElementList {
    children: [
        (
            "aaa",
            Label {
                text: "aaa",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
        ),
        (
            "bbb",
            Label {
                text: "bbb",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
        ),
        (
            "ccc",
            Label {
                text: "ccc",
                flex: FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
            },
        ),
    ],
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
