src/elements/snapshots/panoramix__elements__element_list__tests__new_list_with_no_prev_state.snap
---
source: src/elements/element_list.rs
expression: new_list_state

---
[
    (
        "aaa",
        MockState {
            value: "default-value",
            clicks: 0,
        },
    ),
    (
        "bbb",
        MockState {
            value: "default-value",
            clicks: 0,
        },
    ),
    (
        "ccc",
        MockState {
            value: "default-value",
            clicks: 0,
        },
    ),
    (
        "ddd",
        MockState {
            value: "default-value",
            clicks: 0,
        },
    ),
]
